Kelsey Development Sandbox/src/objects/DS_PTSD_CA_B__c.object
<CustomObject>
    <fields>
        <fullName>BPTSV10__c</fullName>
        <label>BPTSV10</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPTSV11P__c</fullName>
        <description>When something reminds my child of what happened, he/she gets very upset, afraid, or sad.</description>
        <label>BPTSV11P</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPTSV11__c</fullName>
        <label>BPTSV11</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPTSV12P__c</fullName>
        <description>My child has trouble feeling happiness or love.</description>
        <label>BPTSV12P</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPTSV12__c</fullName>
        <label>BPTSV12</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPTSVDA1P__c</fullName>
        <description>Dissociative Symptoms A1 Parent</description>
        <label>BPTSVDA1P</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSVDA1__c</fullName>
        <label>BPTSVDA1</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSVDA2P__c</fullName>
        <description>Dissociative Symptoms A2 Parent</description>
        <label>BPTSVDA2P</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSVDA2__c</fullName>
        <label>BPTSVDA2</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSVDACNP__c</fullName>
        <description>Cut off number for symptom A Parent</description>
        <label>BPTSVDACNP</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSVDACN__c</fullName>
        <label>BPTSVDACN</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSVDARNP__c</fullName>
        <description>Dissociative Symptoms Sum A1 and A2 Parent</description>
        <formula>BPTSVDA1P__c  +  BPTSVDA2P__c</formula>
        <label>BPTSVDARNP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSVDARN__c</fullName>
        <formula>BPTSVDA1__c + BPTSVDA2__c</formula>
        <label>BPTSVDARN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSVDSNP__c</fullName>
        <description>One or more of the Dissociative Symptoms are present Parent</description>
        <formula>IF( NOT(ISNULL(BPTSVDACNP__c)), IF(BPTSVDACNP__c  &gt;=  1, 1, 0 ), NULL)</formula>
        <label>BPTSVDSNP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSVDSN__c</fullName>
        <formula>IF( NOT(ISNULL(BPTSVDACN__c)), IF(BPTSVDACN__c &gt;= 1, 1, 0 ), NULL)</formula>
        <label>BPTSVDSN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSVDSP__c</fullName>
        <description>DSM-5 PTSD Diagnosis Subtype Parent</description>
        <formula>IF( NOT(ISNULL(BPTSVDSNP__c)), IF(BPTSVDSNP__c  =  1, &quot;Yes&quot;, &quot;No&quot; ), NULL)</formula>
        <label>BPTSVDSP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPTSVDS__c</fullName>
        <formula>IF( NOT(ISNULL(BPTSVDSN__c)), IF(BPTSVDSN__c = 1, &quot;Yes&quot;, &quot;No&quot; ), NULL)</formula>
        <label>BPTSVDS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Background_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Background ID</label>
        <referenceTo>DS_Background_Family_Info_B__c</referenceTo>
        <relationshipLabel>DS PTSD CA B</relationshipLabel>
        <relationshipName>DS_PTSD_CA_B</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <formula>Client__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>DS PTSD CA B</relationshipLabel>
        <relationshipName>DS_PTSD_CA_B</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SECTION__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>SECTION</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATUS_PTSD_CA__c</fullName>
        <label>STATUS PTSD CA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STATUS_PTSD_PA__c</fullName>
        <label>STATUS PTSD PA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DS PTSD CA B</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Background_ID__c</columns>
        <columns>Client__c</columns>
        <columns>BDOV__c</columns>
        <columns>BDOAPTSD__c</columns>
        <columns>BDOAPTSDP__c</columns>
        <columns>STATUS_PTSD_CA__c</columns>
        <columns>STATUS_PTSD_PA__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DS PTSD CA B Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DS PTSD CA B</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>PTSD_CA_date_cannot_be_before_BDOV</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISPICKVAL(STATUS_PTSD_CA__c, &apos;&apos;)) &amp;&amp; (BDOV__c &gt;  BDOAPTSD__c)</errorConditionFormula>
        <errorDisplayField>BDOAPTSD__c</errorDisplayField>
        <errorMessage>Baseline PTSD-RI date of administration cannot be before Baseline date of visit.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PTSD_CA_date_cannot_be_before_birth</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISPICKVAL(STATUS_PTSD_CA__c, &quot;&quot;)) &amp;&amp; (Client__r.DOB1__c &gt;  BDOAPTSD__c)</errorConditionFormula>
        <errorDisplayField>BDOAPTSD__c</errorDisplayField>
        <errorMessage>Baseline date of administration cannot be before birth.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PTSD_CA_date_cannot_be_future</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISPICKVAL(STATUS_PTSD_CA__c, &quot;&quot;)) &amp;&amp;  (BDOAPTSD__c &gt; TODAY())</errorConditionFormula>
        <errorDisplayField>BDOAPTSD__c</errorDisplayField>
        <errorMessage>Enter a valid date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PTSD_CA_date_required</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISPICKVAL(STATUS_PTSD_CA__c, &apos;&apos;)) &amp;&amp; ISNULL(BDOAPTSD__c )</errorConditionFormula>
        <errorDisplayField>BDOAPTSD__c</errorDisplayField>
        <errorMessage>Please indicate the date of administration.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PTSD_CA_must_indicate_method</fullName>
        <active>true</active>
        <description>Method of administration is required.</description>
        <errorConditionFormula>NOT(ISPICKVAL(STATUS_PTSD_CA__c, &quot;&quot;)) &amp;&amp; ISPICKVAL(BMETPTSD__c , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>BMETPTSD__c</errorDisplayField>
        <errorMessage>Please indicate how this form was administered.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PTSD_PA_date_cannot_be_before_BDOV</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISPICKVAL(STATUS_PTSD_PA__c, &apos;&apos;)) &amp;&amp; (BDOV__c &gt;  BDOAPTSDP__c)</errorConditionFormula>
        <errorDisplayField>BDOAPTSDP__c</errorDisplayField>
        <errorMessage>Baseline PTSD-RI date of administration cannot be before Baseline date of visit.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PTSD_PA_date_cannot_be_before_birth</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISPICKVAL(STATUS_PTSD_PA__c, &quot;&quot;)) &amp;&amp; (Client__r.DOB1__c &gt; BDOAPTSDP__c)</errorConditionFormula>
        <errorDisplayField>BDOAPTSDP__c</errorDisplayField>
        <errorMessage>Baseline date of administration cannot be before birth.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PTSD_PA_date_cannot_be_future</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISPICKVAL(STATUS_PTSD_PA__c, &quot;&quot;)) &amp;&amp;  (BDOAPTSDP__c &gt; TODAY())</errorConditionFormula>
        <errorDisplayField>BDOAPTSDP__c</errorDisplayField>
        <errorMessage>Enter a valid date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PTSD_PA_date_required</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISPICKVAL(STATUS_PTSD_PA__c, &apos;&apos;)) &amp;&amp; ISNULL(BDOAPTSDP__c )</errorConditionFormula>
        <errorDisplayField>BDOAPTSDP__c</errorDisplayField>
        <errorMessage>Please indicate the date of administration.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PTSD_PA_must_indicate_method</fullName>
        <active>true</active>
        <description>Method of administration is required.</description>
        <errorConditionFormula>NOT(ISPICKVAL(STATUS_PTSD_PA__c, &quot;&quot;)) &amp;&amp; ISPICKVAL(BMETPTSDP__c , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>BMETPTSDP__c</errorDisplayField>
        <errorMessage>Please indicate how this form was administered.</errorMessage>
    </validationRules>
</CustomObject>